Add explanation to application.properties
Signed-off-by: nanashi <nanashi.hatch@gmail.com>

--- a/WEB-INF/src/application.properties
+++ b/WEB-INF/src/application.properties
@@ -1,2 +1,9 @@
+# Max Connection Limit (Publish + Play)
+# Actually, maxConnection + 1 is the limit number of
+# connections, because of publish connection is into counts.
 maxConnections = 20
+
+# Allow Publish HostName or IP Address
+# Separate by comma if allow two or more.
+# Any host is allowed if set "*".
 allowPublishHosts = 127.0.0.1, localhost
